# docling-av-transcriber

./: .gitignore  README.md  pyproject.toml
docling_av_transcriber/: __init__.py  api.py  config.py  types.py
docling_av_transcriber/media/: __init__.py  audio.py  backend.py  video.py
docling_av_transcriber/models/: __init__.py  aliyun_bailian.py  aliyun_vision.py  base.py
docling_av_transcriber/pipelines/: __init__.py  asr_pipeline.py  document_builder.py
examples/: basic_usage.py  debug_usage.py
scripts/: test_artifacts.py  transcribe_remote.py
tests/: test_client.py  test_logging.py  test_pipeline.py
